Bug 162781 - Table in DOCX may limit its width to an overlapping floating frame, instead of shifting down
Summary: Table in DOCX may limit its width to an overlapping floating frame, instead o...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.2.0 target:24.8.2
Keywords:
Depends on:
Blocks:
 
Reported: 2024-09-04 07:47 UTC by Mike Kaganski
Modified: 2024-12-04 22:22 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Testdoc from commit 74533c1f1d5e8e48a65d33bef236f1382d32aa06 (14.55 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-09-04 07:47 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2024-09-04 07:47:54 UTC
Created attachment 196215 [details]
Testdoc from commit 74533c1f1d5e8e48a65d33bef236f1382d32aa06

Open attachment 196179 [details] from bug 162746. Inspect the tables in the document.
On page 22, Table1 gets an incorrect width (it's less than 2 mm). The same happens on other pages, too.
Over different versions, the specific ranges where that happened changed.

Another case is the test doc for bug 162746, added in commit 74533c1f1d5e8e48a65d33bef236f1382d32aa06, that is attached here.

When opened in Word, both documents show normal table widths.

A related change, that solved a similar/related problem, was commit fd7749fddc5a767461dfced55369af48e5a6d561.
Comment 1 Mike Kaganski 2024-09-04 08:27:47 UTC
https://gerrit.libreoffice.org/c/core/+/172855
Comment 2 Commit Notification 2024-09-04 13:12:04 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6d3a98a0011b70570ce3ef0b7873d0d1ee26a35a

tdf#162781: also shift down tables with text::HoriOrientation::RIGHT

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-09-05 07:03:33 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/a2eb29995f8f4ba91496242ed7b98237f6c0e763

tdf#162781: also shift down tables with text::HoriOrientation::RIGHT

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Justin L 2024-12-04 22:22:14 UTC
Nice: this also fixed tdf43890's example.