tdf#162781: also shift down tables with text::HoriOrientation::RIGHT

As said in commit 7b1c03ed87f7a21606e09863b23074e6b96e26d1 (tdf#154775
sw: layout: avoid breaking this with following commits, 2023-08-24), it
would be best not to check HoriOrient at all, but needs checking first
what Word does in other cases. So I just add another case that is known
to require the shift.

Change-Id: I05a8e17ec53741e99b004369629fd9fecf78526d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172855
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>